--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devbookhq/splitter": "^1.4.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@headlessui/react": "^1.7.15",
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^4.6.2",
+    "classnames": "^2.3.2",
+    "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-icons": "^4.10.1",
+    "react-native-web": "^0.19.4",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-dev-server": "4.14.0"
   }
 }
